<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/productNameTxt"
    android:layout_width="match_parent"
    android:background="#949ca4"
    android:layout_height="match_parent">

    <GridLayout
        android:id="@+id/gridLayout"
...
        android:layout_height="0dp"
        android:layout_marginEnd="91dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/addBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/header_background"
        android:backgroundTint="#272928"
        android:text="Add to cart"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

...
        <ImageButton
            android:id="@+id/searchBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:backgroundTint="#272928"
            android:onClick="search"
            android:src="@drawable/ic_pink_search"/>

        <ImageButton
            android:id="@+id/barcodeBtn"
            android:layout_width="0dp"
            android:layout_weight=".25"
...
